dev/test_programs/INVALID/group1/exp17.go
package main

func main(){
	var array [2]int;
	array[0] = 4;
	var x int = array[0, 1];
}
